kubernetes/development/db-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  labels:
    name: mongo
spec:
  selector:
    name: mongo
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
